fixed some z-indexes

--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,7 @@ div#logo_wrapper{
   position: relative;
   right: 5%;
   height: 120%;
-  z-index:10;
+  z-index: 8;
 }
 
 section.section{
